# CIRISAgent

./: .ci-trigger  .coveragerc  .dockerignore  .env.example  .git-trigger  .gitignore  .pre-commit-config.yaml  .token  .vulture.toml  .vulture_whitelist.py  AGENTBEATS_INTEGRATION.md  AGENTS.md  ARCHITECTURE_OVERVIEW.md  BUILD_INFO.txt  CHANGELOG-2025.md  CHANGELOG.md  CIRIS_AGENT_RUNTIME_GUIDE.md  CIRIS_COMPREHENSIVE_GUIDE.md  CIRIS_COMPREHENSIVE_GUIDE_ANDROID.md  CIRIS_COMPREHENSIVE_GUIDE_MOBILE.md  CLAUDE.md  CONTRIBUTING.md  COVENANT.md  DSAR_ORCHESTRATOR_TYPE_FIXES_TODO.md  Dockerfile  FILTER_BUGS_FOUND.md  INITIALIZER_REFACTOR_DETAILED_PLAN.md  LABOR_STORY_SCRIPT_ALIGNMENT.md  LIABILITY_BOUNDARIES.md  MANIFEST.in  MISSION.md  NOTICE  OAUTH_STATE_SECURITY_AUDIT.md  PHASE_1_2_SUMMARY.md  PLAN_module_configuration_workflow.md  POSTGRESQL_SETUP.md  PR_DESCRIPTION_RC1.md  QUALITY_IMPROVEMENT_PLAN.md  RC1_PREP_STATUS.md  README.md  (+108 more)
.githooks/: smart-commit-hook.py
.playwright-cli/: ha_login.js  page-2026-04-23T03-24-52-603Z.yml
CLAUDE_LOCAL_BACKUP_0916/: claude  package-lock.json
FSD/: 019_WISDOM_EXTENSION_CAPABILITY_SYSTEM.md  ACCORD_INVOCATION_SYSTEM.md  ADAPTERS_VS_SKILLS_SWOT.md  ADAPTER_DEVELOPMENT_GUIDE.md  AIR_ARTIFICIAL_INTERACTION_REMINDER.md  AUTHENTICATION.md  CEG_NATIVE_AGENT.md  CELL_VIZ_REDESIGN.md  COGNITIVE_STATE_BEHAVIORS.md  COMMONS_CREDITS.md  CONSCIENCE_V3.md  CORRELATIONS_TSDB.md  COVENANT_INVOCATION_SYSTEM.md  DMA_BOUNCE.md  DREAM_PROCESSOR.md  FSD_ticket_status_handling.md  LLMCB_SELFCONFIG.md  LLM_SETTINGS.md  MISSION_DRIVEN_DEVELOPMENT.md  NETWORK_SCHEMAS.md  OAUTH_PERMISSION_REQUEST_SYSTEM.md  PROOF_OF_BENEFIT_FEDERATION.md  SECRETS.md  SKILL_STUDIO.md  SKILL_STUDIO_DIAGRAMS.md  SMARTSTARTUP_MOBILE.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_PLAN_ticket_status_system.md  TRACE_EVENT_LOG_PERSISTENCE.md  TRACE_WIRE_FORMAT.md  TSDB_CONSOLIDATION_REPUTABILITY.md  WALLET_ADAPTER.md  WALLET_REGULATORY_COMPLIANCE.md  WALLET_SIGNING_ARCHITECTURE.md  accord_events_receiver.md  multi_occurrence_canary_rollout.md  multi_occurrence_implementation_plan_1.4.8.md  system_messages.md  ui_ux_system_messages_ticket.md
RELEASE_NOTES/: RELEASE_NOTES_1.4.1.md  RELEASE_NOTES_1.4.2.md  RELEASE_NOTES_1.4.5.md  RELEASE_NOTES_1.4.6.md
android/: .gitignore  BUILDING.md  README.md  build.gradle  gradle.properties  settings.gradle
android_gui_static/: index.html  index.txt
benchmark_results/: ciris_maverick_run1_20260214_214457.json  ciris_maverick_run1_20260214_221150.json  ciris_maverick_run1_20260214_222327.json  ciris_maverick_run1_20260215_081257.json  ciris_maverick_run2_20260214_221150.json  ciris_maverick_run2_20260214_222327.json  ciris_maverick_run2_20260215_081257.json  ciris_maverick_run3_20260214_214457.json  ciris_maverick_run3_20260214_221150.json  ciris_maverick_run3_20260214_222327.json  ciris_maverick_run3_20260215_081257.json  ciris_maverick_run4_20260214_214457.json  ciris_maverick_run4_20260214_221150.json  ciris_maverick_run4_20260215_081257.json  ciris_maverick_run5_20260214_214457.json  ciris_maverick_run5_20260214_221150.json  ciris_maverick_run5_20260215_081257.json  ciris_single_result.json  run1_v12.json
ciris_adapters/: README.md  __init__.py  skill_base.py
ciris_engine/: README.md  cli.py  constants.py  desktop_launcher.py
ciris_manager/: CLI_ACTUAL.md  CLI_README.md  cli_v2.py  compose_generator.py
ciris_profiles/: echo-core.yaml  echo-speculative.yaml
ciris_sdk/: README.md  __init__.py  client.py  model_types.py  models.py  pagination.py  setup.py  telemetry_models.py  telemetry_responses.py  transport.py
ciris_templates/: CIRIS_TEMPLATE_GUIDE.md  default.yaml  echo-core.yaml  echo-speculative.yaml  echo.yaml  sage.yaml  scout.yaml
cirisnodecore/: MISSION.md  SCHEMA.md
ios/CirisiOS/: pyproject.toml
ios/CirisiOS/src/ciris_ios/: app.py  crypto_compat.py  ios_logger.py  ios_main.py  kmp_main.py  psutil.py  version.py
(+6254 files in other folders)
